Fix header background color for improved visibility

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body, html {
 .header-main {
     width: 100%;
     height: 60px;
-    color: white;
+    background-color: rgb(255, 255, 255);
     justify-content: space-between;
     display: flex;
   }
